# demo-project

./: README.md  makefile
cmake/: CMakeLists.txt
include/: nearest-greater-number-array.h
src/: nearest-greater-number-array.cpp  unit-test.cpp
